--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+.firebase/hosting.ZGlzdFxhcGxhem8tdGVzdA.cache
+.firebaserc
+.gitignore
+firebase.json
+y/index.html
